--- a/ai.html
+++ b/ai.html
@@ -1,77 +1,4 @@
-<!DOCTYPE html>
-<html lang="ar" dir="rtl">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>دكتور ديكور - شبابيك للستائر</title>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-<link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700;900&display=swap" rel="stylesheet">
-<style>
-:root { --gold:#d9b382; --brown:#3d2e24; --bg:#f9f6f2; --white:#fff; --whatsapp:#25D366; }
-*{box-sizing:border-box;margin:0;padding:0;font-family:'Cairo',sans-serif;}
-body{background:var(--white);color:var(--brown);line-height:1.6;}
-header{background:var(--white);padding:10px 5%;display:flex;justify-content:space-between;align-items:center;position:sticky;top:0;z-index:1000;box-shadow:0 4px 15px rgba(0,0,0,0.05);}
-.logo-img{height:80px;cursor:pointer;}
-.nav-bar{background:#fcfcfc;border-bottom:1px solid #eee;padding:12px 0;overflow-x:auto;white-space:nowrap;}
-.nav-menu{display:inline-flex;gap:25px;list-style:none;padding:0 20px;}
-.nav-menu a{text-decoration:none;color:var(--brown);font-weight:700;font-size:1rem;}
-.nav-menu a:hover{color:var(--gold);}
-.ai-hero{background:var(--bg);padding:60px 5%;text-align:center;min-height:60vh;display:flex;flex-direction:column;align-items:center;}
-.avatar-container{width:180px;height:180px;background:white;border-radius:50%;border:4px solid var(--gold);margin-bottom:25px;overflow:hidden;box-shadow:0 10px 25px rgba(0,0,0,0.1);}
-#drAvatar{width:100%;height:100%;object-fit:contain;transition:0.5s;}
-.chat-bubble{background:white;padding:25px;border-radius:25px;border-right:6px solid var(--gold);max-width:600px;line-height:1.8;box-shadow:0 5px 15px rgba(0,0,0,0.05);margin-bottom:30px;text-align:right;position:relative;}
-.btn-gold{background:var(--gold);color:white;border:none;padding:18px 40px;border-radius:12px;font-weight:900;cursor:pointer;font-size:1.1rem;width:100%;max-width:400px;transition:.3s;}
-.btn-gold:hover{background:var(--brown);transform:translateY(-3px);}
-.footer-cta{background:var(--brown);color:white;padding:40px 5%;text-align:center;border-radius:40px 40px 0 0;margin-top:50px;}
-.btn-footer{padding:10px 20px;border-radius:8px;text-decoration:none;display:inline-block;font-weight:600;margin:5px;transition:.3s;}
-.wa-float{position:fixed;bottom:20px;right:20px;background:#25D366;color:white;width:60px;height:60px;border-radius:50%;display:flex;align-items:center;justify-content:center;font-size:30px;z-index:9999;animation:pulse 2s infinite;}
-@keyframes pulse{0%{transform:scale(1);box-shadow:0 0 0 0 rgba(37,211,102,0.7);}70%{transform:scale(1.1);box-shadow:0 0 0 10px rgba(37,211,102,0);}100%{transform:scale(1);}}
-</style>
-</head>
-<body>
-
-<header>
-<div style="font-weight:900;line-height:1;">شبابيك<br><span style="color:var(--gold);font-size:0.8rem;">للستائر</span></div>
-<img src="https://i.ibb.co/3y1ZNCk0/1.png" class="logo-img" onclick="location.href='index.html'">
-<div style="width:50px;"></div>
-</header>
-
-<div class="nav-bar">
-<ul class="nav-menu">
-<li><a href="index.html">الرئيسية</a></li>
-<li><a href="index.html?go=categories">المنتجات</a></li>
-<li><a href="ai.html" style="color:var(--gold)">دكتور ديكور</a></li>
-<li><a href="index.html#paymentPage">طرق الدفع</a></li>
-<li><a href="index.html#aboutPage">من نحن</a></li>
-<li><a href="index.html#contactPage">تواصل معنا</a></li>
-</ul>
-</div>
-
-<main class="ai-hero">
-<div class="avatar-container">
-<img id="drAvatar" src="https://i.ibb.co/q3z1RscN/Neutral-removebg-preview.png">
-</div>
-<div class="chat-bubble" id="aiResponse">
-أهلاً بك! التقط صورة لغرفتك وسأقترح الستارة المثالية.
-</div>
-<input type="file" id="aiCamera" accept="image/*" capture="environment" style="display:none;" onchange="analyzeRoom(this)">
-<button onclick="document.getElementById('aiCamera').click()" class="btn-gold">
-<i class="fas fa-camera"></i> ابدأ الاستشارة الآن
-</button>
-</main>
-
-<div class="footer-cta">
-<h2 style="margin-bottom:15px;">جاهز لتجديد ستائر منزلك؟</h2>
-<a href="https://wa.me/9647883002797" class="btn-footer" style="border:1px solid rgba(255,255,255,0.4);color:white;">تواصل عبر واتساب</a>
-<a href="index.html?go=categories" class="btn-footer" style="background:var(--gold);color:white;">تصفح المنتجات</a>
-</div>
-
-<footer style="background:var(--brown);color:rgba(255,255,255,0.6);padding:20px;text-align:center;">
-<p>© 2026 جميع الحقوق محفوظة لشبابيك للستائر - ظل وذوق</p>
-</footer>
-
-<a href="https://wa.me/9647883002797" class="wa-float" target="_blank"><i class="fab fa-whatsapp"></i></a>
-
+<script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 <script>
 const workerUrl = "https://0.bilalmohammedsalem23.workers.dev/";
 
@@ -82,28 +9,48 @@ async function analyzeRoom(input){
   const box = document.getElementById("aiResponse");
   const avatar = document.getElementById("drAvatar");
 
+  // تأثير بصري أثناء المعالجة
+  avatar.style.filter = "grayscale(100%) blur(2px)";
   avatar.src="https://i.ibb.co/ZzMvg7Mz/Disgust-removebg-preview.png";
-  box.innerHTML='<i class="fas fa-spinner fa-spin"></i> جاري تحليل الغرفة...';
+  box.innerHTML='<i class="fas fa-robot fa-bounce"></i> <b>ذكاء شبابيك الاصطناعي يفحص غرفتك الآن...</b>';
 
   reader.onload = async (e)=>{
-    const base64Data = e.target.result.split(",")[1];
-    try{
-      const response = await fetch(workerUrl,{
-        method:"POST",
-        headers:{"Content-Type":"application/json"},
-        body:JSON.stringify({image:base64Data})
-      });
-      const data = await response.json();
-      avatar.src="https://i.ibb.co/q3z1RscN/Neutral-removebg-preview.png";
-      box.innerHTML = data.reply || "عذراً، لم أتمكن من تحليل الصورة.";
-    }catch(err){
-      avatar.src="https://i.ibb.co/q3z1RscN/Neutral-removebg-preview.png";
-      box.innerHTML="عذراً، فشل الاتصال بالـ Worker.";
-    }
+    // تحويل وتحجيم الصورة لسرعة الاستجابة
+    const img = new Image();
+    img.src = e.target.result;
+    img.onload = async () => {
+        const canvas = document.createElement('canvas');
+        canvas.width = 600; 
+        canvas.height = img.height * (600 / img.width);
+        const ctx = canvas.getContext('2d');
+        ctx.drawImage(img, 0, 0, canvas.width, canvas.height);
+        const base64Data = canvas.toDataURL('image/jpeg', 0.7).split(",")[1];
+
+        try{
+          const response = await fetch(workerUrl,{
+            method:"POST",
+            headers:{"Content-Type":"application/json"},
+            body:JSON.stringify({image:base64Data})
+          });
+          const data = await response.json();
+          
+          avatar.style.filter = "none";
+          avatar.src="https://i.ibb.co/q3z1RscN/Neutral-removebg-preview.png";
+          
+          // عرض النتيجة مع تأثير احتفالي
+          box.innerHTML = `<b>نصيحة دكتور ديكور:</b><br>${data.reply || "عذراً، لم أتمكن من تحليل الصورة."}`;
+          confetti({ particleCount: 100, spread: 70, origin: { y: 0.6 } });
+
+          // إضافة زر انتقال سريع للمنتجات
+          box.innerHTML += `<br><button onclick="location.href='index.html?go=categories'" style="margin-top:15px; background:var(--brown); color:white; border:none; padding:8px 15px; border-radius:8px; cursor:pointer; font-size:0.9rem;">تصفح الموديلات المقترحة</button>`;
+
+        }catch(err){
+          avatar.style.filter = "none";
+          avatar.src="https://i.ibb.co/q3z1RscN/Neutral-removebg-preview.png";
+          box.innerHTML="عذراً، فشل الاتصال بالـ Worker. تأكد من إعدادات الـ CORS في Cloudflare.";
+        }
+    };
   };
   reader.readAsDataURL(file);
 }
 </script>
-
-</body>
-</html>
