--- a/ai.html
+++ b/ai.html
@@ -3,9 +3,10 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Shababek AI Pro</title>
+<title>دكتور ديكور AI PRO - شبابيك للستائر</title>
 <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700;900&display=swap" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
 <style>
 :root{
@@ -14,52 +15,56 @@
 --bg:#f9f6f2;
 --whatsapp:#25D366;
 }
-body{margin:0;background:var(--bg);font-family:'Cairo',sans-serif;text-align:center;color:var(--brown);}
-header{background:#fff;padding:15px;font-weight:900;font-size:22px;box-shadow:0 5px 20px rgba(0,0,0,0.05);}
+body{margin:0;font-family:'Cairo',sans-serif;text-align:center;background:var(--bg);color:var(--brown);}
+header{background:white;padding:15px;font-weight:900;font-size:22px;box-shadow:0 5px 20px rgba(0,0,0,0.05);}
 canvas{max-width:95%;margin-top:15px;border-radius:15px;box-shadow:0 10px 30px rgba(0,0,0,0.1);}
 .controls{margin-top:15px;display:flex;flex-wrap:wrap;justify-content:center;}
-.btn{background:var(--gold);border:none;color:#fff;padding:12px 16px;margin:5px;border-radius:10px;font-weight:700;cursor:pointer;}
+.btn{background:var(--gold);border:none;color:white;padding:12px 16px;margin:5px;border-radius:10px;font-weight:700;cursor:pointer;}
 .btn:hover{opacity:.9}
 .wa{background:var(--whatsapp);}
-#aiResponse{background:#fff;padding:20px;margin:15px auto;max-width:700px;border-right:6px solid var(--gold);border-radius:20px;}
+#aiResponse{background:white;padding:20px;margin:15px auto;max-width:700px;border-right:6px solid var(--gold);border-radius:20px;line-height:1.8;}
+.avatar-container{width:120px;height:120px;margin:10px auto;border-radius:50%;border:4px solid var(--gold);overflow:hidden;box-shadow:0 5px 15px rgba(0,0,0,0.1);}
+#drAvatar{width:100%;height:100%;object-fit:contain;transition:0.3s;}
 </style>
 </head>
-
 <body>
 
-<header>دكتور ديكور AI — شبابيك للستائر</header>
+<header>دكتور ديكور AI PRO — شبابيك للستائر</header>
 
-<div id="aiResponse">
-ارفع صورة غرفتك وسأقترح لك أفضل ستارة متناسقة ✨
+<div class="avatar-container">
+<img id="drAvatar" src="https://i.ibb.co/q3z1RscN/Neutral-removebg-preview.png">
 </div>
 
-<input type="file" accept="image/*" onchange="loadImage(this)">
-<br>
+<div id="aiResponse">
+ارفع صورة غرفتك وسأكشف أبعاد الشباك واقترح لك ستارة واقعية ✨
+</div>
+
+<input type="file" accept="image/*" onchange="loadImage(this)"><br>
 <canvas id="canvas"></canvas>
 
 <div class="controls">
 <button class="btn" onclick="autoDetect()">كشف تلقائي</button>
 <button class="btn" onclick="refineEdges()">تحسين الدقة</button>
-<button class="btn" onclick="applyCurtain()">تطبيق ستارة</button>
+<button class="btn" onclick="applyCurtain()">تطبيق ستارة واقعية</button>
 <button class="btn" onclick="toggleCurtain()">فتح / إغلاق</button>
 <button class="btn" onclick="changeColor()">تغيير يدوي</button>
 <button class="btn" onclick="smartColorMatch()">لون مناسب تلقائياً</button>
 <button class="btn" onclick="measureWindow()">قياس</button>
 <button class="btn" onclick="calculatePrice()">حساب تكلفة</button>
 <button class="btn" onclick="downloadImage()">حفظ الصورة</button>
-<button class="btn wa" onclick="sendToWhatsApp()">إرسال واتساب</button>
+<button class="btn wa" onclick="sendToWhatsApp()"><i class="fab fa-whatsapp"></i></button>
 </div>
 
 <script>
 let canvas=document.getElementById("canvas");
 let ctx=canvas.getContext("2d");
 let img=new Image();
-
 let startX=0,startY=0,endX=0,endY=0;
 let curtainOpen=false;
 let curtainColor="rgba(217,179,130,0.85)";
 let sheerColor="rgba(255,255,255,0.45)";
 let lightLevel=0;
+let drAvatar=document.getElementById("drAvatar");
 
 function loadImage(input){
 if(!input.files[0]) return;
@@ -69,16 +74,20 @@ img.onload=()=>{
 canvas.width=img.width;
 canvas.height=img.height;
 ctx.drawImage(img,0,0);
+document.getElementById("aiResponse").innerHTML="يمكنك الضغط على كشف تلقائي 👌";
+drAvatar.src="https://i.ibb.co/q3z1RscN/Neutral-removebg-preview.png";
 };
 img.src=e.target.result;
 };
 reader.readAsDataURL(input.files[0]);
 }
 
+// كشف تلقائي
 function autoDetect(){
+if(!img.src) return alert("ارفع صورة أولاً");
+drAvatar.src="https://i.ibb.co/ZzMvg7Mz/Disgust-removebg-preview.png"; // تفكير
 ctx.drawImage(img,0,0);
-let imageData=ctx.getImageData(0,0,canvas.width,canvas.height);
-let data=imageData.data;
+let data=ctx.getImageData(0,0,canvas.width,canvas.height).data;
 
 let minX=canvas.width,minY=canvas.height,maxX=0,maxY=0;
 let brightCount=0;
@@ -96,26 +105,29 @@ if(y>maxY)maxY=y;
 }
 }
 }
-
-if(maxX-minX<60) return alert("لم يتم كشف الشباك بدقة");
+if(maxX-minX<60){ 
+drAvatar.src="https://i.ibb.co/q3z1RscN/Neutral-removebg-preview.png";
+return alert("لم أستطع كشف الشباك بدقة 😅");
+}
 
 startX=minX;startY=minY;endX=maxX;endY=maxY;
 lightLevel=brightCount;
-
 drawSelection();
+drAvatar.src="https://i.ibb.co/q3z1RscN/Neutral-removebg-preview.png";
 }
 
+// تحسين الدقة
 function refineEdges(){
 ctx.drawImage(img,0,0);
-let imageData=ctx.getImageData(0,0,canvas.width,canvas.height);
-let data=imageData.data;
+let data=ctx.getImageData(0,0,canvas.width,canvas.height).data;
 for(let i=0;i<data.length;i+=4){
 let avg=(data[i]+data[i+1]+data[i+2])/3;
 data[i]=data[i+1]=data[i+2]=avg>180?255:0;
 }
-ctx.putImageData(imageData,0,0);
+ctx.putImageData(new ImageData(data,canvas.width,canvas.height),0,0);
 }
 
+// رسم مستطيل التحديد
 function drawSelection(){
 ctx.drawImage(img,0,0);
 ctx.strokeStyle="#d9b382";
@@ -123,94 +135,89 @@ ctx.lineWidth=4;
 ctx.strokeRect(startX,startY,endX-startX,endY-startY);
 }
 
+// ستارة واقعية
 function applyCurtain(){
+if(endX<=startX) return alert("يرجى كشف الشباك أولاً");
 ctx.drawImage(img,0,0);
 let w=endX-startX;
 let h=endY-startY;
-let visibleWidth=curtainOpen?w/6:w;
+let visibleWidth=curtainOpen?w*0.15:w;
+let folds=18;
+let foldWidth=visibleWidth/folds;
 
-ctx.fillStyle=sheerColor;
+// خلفية شفافة
+let gradientSheer=ctx.createLinearGradient(startX,startY,startX,startY+h);
+gradientSheer.addColorStop(0,"rgba(255,255,255,0.55)");
+gradientSheer.addColorStop(1,"rgba(255,255,255,0.25)");
+ctx.fillStyle=gradientSheer;
 ctx.fillRect(startX,startY,w,h);
 
-ctx.fillStyle=curtainColor;
-ctx.fillRect(startX,startY,visibleWidth,h);
-
-for(let i=0;i<14;i++){
-let foldX=startX+(i*(visibleWidth/14));
+// القماش
+for(let i=0;i<folds;i++){
+let x=startX+i*foldWidth;
+let waveOffset=Math.sin(i*0.7)*10;
+let grad=ctx.createLinearGradient(x,0,x+foldWidth,0);
+grad.addColorStop(0,curtainColor);
+grad.addColorStop(0.5,"rgba(0,0,0,0.05)");
+grad.addColorStop(1,curtainColor);
+ctx.fillStyle=grad;
 ctx.beginPath();
-ctx.moveTo(foldX,startY);
-ctx.lineTo(foldX,startY+h);
-ctx.stroke();
+ctx.moveTo(x,startY);
+ctx.bezierCurveTo(
+x+foldWidth/4 + waveOffset, startY + h*0.3,
+x+foldWidth/2 - waveOffset, startY + h*0.6,
+x+foldWidth, startY+h
+);
+ctx.lineTo(x,startY+h);
+ctx.closePath();
+ctx.fill();
 }
+ctx.shadowColor="rgba(0,0,0,0.2)";
+ctx.shadowBlur=25;
+ctx.strokeStyle="rgba(0,0,0,0.15)";
+ctx.strokeRect(startX,startY,visibleWidth,h);
+ctx.shadowBlur=0;
 
 confetti({particleCount:80,spread:60});
 }
 
-function toggleCurtain(){
-curtainOpen=!curtainOpen;
-applyCurtain();
-}
+// فتح/اغلاق
+function toggleCurtain(){curtainOpen=!curtainOpen; applyCurtain();}
 
-function changeColor(){
-if(curtainColor.includes("217")){
-curtainColor="rgba(61,46,36,0.85)";
-}else{
-curtainColor="rgba(217,179,130,0.85)";
-}
-applyCurtain();
-}
+// تغيير اللون يدوي
+function changeColor(){curtainColor=curtainColor.includes("217")?"rgba(61,46,36,0.85)":"rgba(217,179,130,0.85)";applyCurtain();}
 
+// اختيار لون تلقائي حسب الأثاث
 function smartColorMatch(){
 ctx.drawImage(img,0,0);
-let imageData=ctx.getImageData(0,0,canvas.width,canvas.height);
-let data=imageData.data;
-
+let data=ctx.getImageData(0,0,canvas.width,canvas.height).data;
 let r=0,g=0,b=0,count=0;
-
 for(let y=0;y<canvas.height;y+=5){
 for(let x=0;x<canvas.width;x+=5){
 if(x>startX && x<endX && y>startY && y<endY) continue;
 let i=(y*canvas.width+x)*4;
-r+=data[i];g+=data[i+1];b+=data[i+2];
-count++;
+r+=data[i]; g+=data[i+1]; b+=data[i+2]; count++;
 }
 }
-
-let avgR=r/count;
-let avgG=g/count;
-let avgB=b/count;
-
+let avgR=r/count, avgG=g/count, avgB=b/count;
 let compR=(255-avgR+200)/2;
 let compG=(255-avgG+180)/2;
 let compB=(255-avgB+160)/2;
-
 curtainColor=`rgba(${compR},${compG},${compB},0.85)`;
 applyCurtain();
 }
 
-function measureWindow(){
-let w=Math.abs(endX-startX)*0.26;
-let h=Math.abs(endY-startY)*0.26;
-alert("العرض: "+w.toFixed(1)+" سم\nالارتفاع: "+h.toFixed(1)+" سم");
-}
+// قياس
+function measureWindow(){let w=Math.abs(endX-startX)*0.26; let h=Math.abs(endY-startY)*0.26; alert("العرض: "+w.toFixed(1)+" سم\nالارتفاع: "+h.toFixed(1)+" سم");}
 
-function calculatePrice(){
-let w=Math.abs(endX-startX)*0.26;
-let price=(w*18).toFixed(0);
-alert("السعر التقريبي: "+price+" ريال");
-}
+// حساب تكلفة
+function calculatePrice(){let w=Math.abs(endX-startX)*0.26; let price=(w*18).toFixed(0); alert("السعر التقريبي: "+price+" ريال");}
 
-function downloadImage(){
-let link=document.createElement('a');
-link.download="shababek-design.png";
-link.href=canvas.toDataURL();
-link.click();
-}
+// حفظ
+function downloadImage(){let link=document.createElement('a'); link.download="shababek-design.png"; link.href=canvas.toDataURL(); link.click();}
 
-function sendToWhatsApp(){
-let text="مرحبا شبابيك 👋 أريد تنفيذ هذه الستارة.";
-window.open("https://wa.me/9647883002797?text="+encodeURIComponent(text),"_blank");
-}
+// واتساب
+function sendToWhatsApp(){let text="مرحبا شبابيك 👋 أريد تنفيذ هذه الستارة."; window.open("https://wa.me/9647883002797?text="+encodeURIComponent(text),"_blank");}
 </script>
 
 </body>
