--- a/index.html
+++ b/index.html
@@ -369,7 +369,8 @@
     </div>
 
     <footer><div style="font-size:1.8rem; font-weight:900; color:var(--gold); margin-bottom:10px;">شبابيك</div><p>© 2026 جميع الحقوق محفوظة لشبابيك للستائر - ظل وذوق</p></footer>
-// 1. تهيئة Firebase (مرة واحدة فقط لكل الموقع)
+<script>
+                  // 1. تهيئة Firebase (مرة واحدة فقط لكل الموقع)
 const firebaseConfig = { 
     apiKey: "AIzaSyD1TENeV6RkWmrYIjV6seGx84VavsM_tvE", 
     authDomain: "shababekcurtain.firebaseapp.com", 
