--- a/index.html
+++ b/index.html
@@ -350,20 +350,50 @@ const firebaseConfig = {
     databaseURL: "https://shababekcurtain-default-rtdb.asia-southeast1.firebasedatabase.app/", 
     projectId: "shababekcurtain" 
 };
-firebase.initializeApp(firebaseConfig);
+if (!firebase.apps.length) firebase.initializeApp(firebaseConfig);
 const db = firebase.database();
 
+// متغيرات عامة
 const CLOUD_NAME = "dnkuwf8q9", UPLOAD_PRESET = "afsx4w9k", LOGO_ID = "shababek_logo";
-let cur = null, cart = [], adminClicks = 0;
+let cur = null, cart = [], adminClicks = 0, clickTimer;
 
-function v(id) { return document.getElementById(id).value; }
-
-// --- ٢. محرك الصور والعلامة المائية ---
-function getWatermarkedUrl(url) {
-    if (!url || !url.includes("cloudinary.com")) return url;
-    return url.replace("/upload/", `/upload/l_${LOGO_ID},o_25,w_250,g_center/`);
+// دالة جلب القيم المختصرة
+function v(id) { 
+    const el = document.getElementById(id);
+    return el ? el.value : ""; 
 }
 
+// --- 2. محرك الشعار ولوحة التحكم (5 ضغطات سريعة) ---
+function handleLogoClick() {
+    adminClicks++;
+    clearTimeout(clickTimer);
+    if (adminClicks >= 5) {
+        adminClicks = 0;
+        const pass = prompt("أدخل رمز الدخول السحابي لشبابيك:");
+        if (pass === "8496") {
+            showPage('adminPanel');
+            if (typeof confetti === 'function') confetti({ particleCount: 100, spread: 70 });
+        } else if (pass !== null) { alert("الرمز غير صحيح!"); }
+        return;
+    }
+    clickTimer = setTimeout(() => {
+        if (adminClicks === 1) showPage('homePage');
+        adminClicks = 0;
+    }, 400);
+}
+
+// --- 3. نظام التنقل المصحح (يصعد للأعلى دائماً) ---
+function showPage(id, push = true) {
+    document.querySelectorAll('.page').forEach(p => p.classList.remove('active'));
+    const targetPage = document.getElementById(id);
+    if (targetPage) {
+        targetPage.classList.add('active');
+        setTimeout(() => { window.scrollTo({ top: 0, behavior: 'instant' }); }, 10);
+        if (push) location.hash = id;
+    }
+}
+
+// --- 4. محرك الصور السحابي ---
 async function uploadImg(file) {
     if (!file) return "";
     const formData = new FormData();
@@ -374,106 +404,86 @@ async function uploadImg(file) {
     return data.secure_url;
 }
 
-// --- ٣. نظام التنقل والهاش ---
-function showPage(id, push = true) {
-    document.querySelectorAll('.page').forEach(p => p.classList.remove('active'));
-    const targetPage = document.getElementById(id);
-    if (targetPage) {
-        targetPage.classList.add('active');
-        window.scrollTo(0, 0);
-        if (push) location.hash = id; 
-    }
+function getWatermarkedUrl(url) {
+    if (!url || !url.includes("cloudinary.com")) return url;
+    return url.replace("/upload/", `/upload/l_${LOGO_ID},o_25,w_250,g_center/`);
 }
 
-function handleLogoClick() { 
-    adminClicks++; 
-    if(adminClicks >= 5) { 
-        if(prompt("الرمز:") === "8496") showPage('adminPanel'); 
-        adminClicks = 0; 
-    } else { showPage('homePage'); } 
-}
-
-// --- ٤. وظائف لوحة التحكم ---
-db.ref('categories').on('value', snap => {
-    const cats = snap.val() || {};
-    const admListCats = document.getElementById('admListCats');
-    if(admListCats) admListCats.innerHTML = Object.entries(cats).map(([k,v]) => `<tr><td>${v.name}</td><td><button onclick="deleteItem('categories','${k}')" style="color:red; border:none; background:none;">حذف</button></td></tr>`).join('');
-    const admProdCatSelect = document.getElementById('admProdCatSelect');
-    if(admProdCatSelect) admProdCatSelect.innerHTML = '<option disabled selected>اختر قسم المنتجات</option>' + Object.values(cats).map(s => `<option>${s.name}</option>`).join('');
-});
-
-db.ref('products').on('value', snap => {
-    const data = snap.val() || {};
-    const admListProds = document.getElementById('admListProds');
-    if(admListProds) admListProds.innerHTML = Object.entries(data).map(([k,v]) => `<tr><td>${v.name}</td><td><button onclick="deleteItem('products','${k}')" style="color:red; border:none; background:none;">حذف</button></td></tr>`).join('');
-});
-
-function deleteItem(ref, key) { if(confirm("حذف؟")) db.ref(ref).child(key).remove(); }
-
+// --- 5. وظائف إدارة المتجر (أقسام ومنتجات) ---
 async function publishCat() {
-    const fileInput = document.getElementById('admCatFile');
-    if(!fileInput.files[0] || !v('admCatName')) return alert("أكمل البيانات");
-    const url = await uploadImg(fileInput.files[0]);
+    const file = document.getElementById('admCatFile').files[0];
+    if(!file || !v('admCatName')) return alert("أكمل بيانات القسم");
+    const url = await uploadImg(file);
     db.ref('categories').push({name: v('admCatName'), img: url}).then(() => location.reload());
 }
 
 async function publishProd() {
-    const fileInput = document.getElementById('admProdFile');
-    if(!fileInput.files[0] || !v('admProdName') || !v('admProdPrice')) return alert("أكمل البيانات");
-    const url = await uploadImg(fileInput.files[0]);
-    db.ref('products').push({ category: v('admProdCatSelect'), name: v('admProdName'), price: v('admProdPrice'), img: url }).then(() => location.reload());
+    const file = document.getElementById('admProdFile').files[0];
+    const cat = document.getElementById('admProdCatSelect').value;
+    if(!file || !v('admProdName') || cat === "اختر قسم المنتجات") return alert("أكمل بيانات المنتج");
+    const url = await uploadImg(file);
+    db.ref('products').push({ category: cat, name: v('admProdName'), price: v('admProdPrice'), img: url }).then(() => location.reload());
 }
 
-// --- ٥. دكتور ديكور (الحل الجذري والنهائي) ---
+// --- 6. وظائف إدارة منتدى شبابيك (المصححة) ---
+async function saveItem(ref, data) {
+    if(!data.name && !data.title) return alert("يرجى إدخال البيانات");
+    db.ref(ref).push(data).then(() => {
+        alert("تم الحفظ بنجاح!");
+        location.reload();
+    });
+}
+
+function toggleForumInput() {
+    const type = document.getElementById('admForumType').value;
+    document.getElementById('admForumUrl').style.display = (type === 'vid') ? 'block' : 'none';
+    document.getElementById('admForumFile').style.display = (type === 'vid') ? 'none' : 'block';
+}
+
+async function publishForumTopic() {
+    const title = v('admForumTitle'), desc = v('admForumDesc');
+    const section = document.getElementById('selectForumTopicSec').value;
+    const type = v('admForumType'), btn = document.getElementById('btnForumPost'), fileInput = document.getElementById('admForumFile');
+    
+    if(!title || section === "" || section === "اختر القسم") return alert("أكمل العنوان والقسم");
+    btn.innerText = "جاري النشر..."; btn.disabled = true;
+
+    let mediaUrl = (type === 'vid') ? v('admForumUrl') : (fileInput.files[0] ? await uploadImg(fileInput.files[0]) : "");
+
+    db.ref('forumTopics').push({ section, title, desc, media: mediaUrl, type, date: new Date().toLocaleString('ar-EG'), timestamp: Date.now() })
+    .then(() => { alert("تم النشر في المنتدى!"); location.reload(); });
+}
+
+// --- 7. وظيفة طرق الدفع (المصححة) ---
+async function publishPayment() {
+    const name = v('admPayName'), file = document.getElementById('admPayFile').files[0];
+    if(!name || !file) return alert("أدخل اسم الطريقة وصورة الشعار");
+    const url = await uploadImg(file);
+    db.ref('payments').push({ name, img: url }).then(() => { alert("تم حفظ طريقة الدفع"); location.reload(); });
+}
+
+function deleteItem(ref, key) { if(confirm("هل تريد الحذف نهائياً؟")) db.ref(ref).child(key).remove(); }
+
+// --- 8. دكتور ديكور (AI) ---
 async function handleDrImage(input) {
-    if (!input || !input.files || !input.files[0]) return;
-    const box = document.getElementById('aiResponse');
-    const avatar = document.getElementById('drAvatar');
-    const status = document.getElementById('drStatus');
-
+    if (!input.files[0]) return;
+    const box = document.getElementById('aiResponse'), avatar = document.getElementById('drAvatar'), status = document.getElementById('drStatus');
     avatar.src = "https://i.ibb.co/ZzMvg7Mz/Disgust-removebg-preview.png";
-    status.innerText = "جاري التحليل الآن...";
-    box.style.display = "block";
-    box.innerHTML = "يرجى الانتظار...";
-
-    try {
-        const reader = new FileReader();
-        reader.readAsDataURL(input.files[0]);
-        reader.onload = async (e) => {
-            const img = new Image();
-            img.src = e.target.result;
-            img.onload = async () => {
-                const canvas = document.createElement('canvas');
-                const MAX_WIDTH = 600;
-                canvas.width = MAX_WIDTH;
-                canvas.height = img.height * (MAX_WIDTH / img.width);
-                const ctx = canvas.getContext('2d');
-                ctx.drawImage(img, 0, 0, canvas.width, canvas.height);
-                const base64 = canvas.toDataURL('image/jpeg', 0.7).split(',')[1];
-
-                const res = await fetch("https://shababek-ai.bilalmohammedsalem23.workers.dev", {
-                    method: 'POST',
-                    headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify({ image: base64 })
-                });
-
-                const data = await res.json();
-                avatar.src = "https://i.ibb.co/q3z1RscN/Neutral-removebg-preview.png";
-                
-                if (data && data.candidates) {
-                    status.innerText = "هذه توصية دكتور ديكور:";
-                    box.innerHTML = `<div style="background:white;padding:15px;border-radius:12px;border-right:5px solid var(--gold);line-height:1.9;">${data.candidates[0].content.parts[0].text}</div>`;
-                    confetti({ particleCount: 150 });
-                }
-            };
-        };
-    } catch (err) {
-        status.innerText = "فشل التحليل";
-        box.innerHTML = "تأكد من الإنترنت وحاول مجدداً.";
-    }
+    status.innerText = "جاري التحليل...";
+    const reader = new FileReader();
+    reader.readAsDataURL(input.files[0]);
+    reader.onload = async (e) => {
+        const base64 = e.target.result.split(',')[1];
+        const res = await fetch("https://shababek-ai.bilalmohammedsalem23.workers.dev", { method: 'POST', body: JSON.stringify({ image: base64 }) });
+        const data = await res.json();
+        avatar.src = "https://i.ibb.co/q3z1RscN/Neutral-removebg-preview.png";
+        status.innerText = "توصية دكتور ديكور:";
+        box.innerHTML = `<div style="background:white;padding:15px;border-radius:12px;border-right:5px solid var(--gold);">${data.candidates[0].content.parts[0].text}</div>`;
+        confetti({ particleCount: 150 });
+    };
 }
 
-// --- ٦. نظام السلة والعرض ---
+// --- 9. نظام السلة وعرض المنتجات ---
 function openCat(n) { 
     localStorage.setItem('lastCat', n);
     db.ref('products').once('value', snap => { 
@@ -482,18 +492,14 @@ function openCat(n) {
         document.getElementById('catGrid').innerHTML = items.map(x => `
             <div class="cat-card-new" onclick='openCalc(${JSON.stringify(x)})'>
                 <img src="${x.img}" style="width:100%;height:250px;object-fit:cover;">
-                <div style="padding:20px;text-align:center;">
-                    <h3>${x.name}</h3>
-                    <p style="color:var(--gold);font-weight:900;">${parseInt(x.price).toLocaleString()} د.ع</p>
-                </div>
+                <div style="padding:20px;text-align:center;"><h3>${x.name}</h3><p style="color:var(--gold);font-weight:900;">${parseInt(x.price).toLocaleString()} د.ع</p></div>
             </div>`).join(''); 
         showPage('categoryView'); 
     }); 
 }
 
 function openCalc(p) { 
-    cur = p; 
-    localStorage.setItem('lastProd', JSON.stringify(p));
+    cur = p; localStorage.setItem('lastProd', JSON.stringify(p));
     showPage('productCalculator'); 
     document.getElementById('pName').innerText = p.name; 
     document.getElementById('pPrice').innerText = parseInt(p.price).toLocaleString(); 
@@ -501,93 +507,54 @@ function openCalc(p) {
 }
 
 function addToCart() {
-    const h = v('hIn');
-    if(!h || h <= 0) return alert("أدخل الطول");
+    const h = v('hIn'); if(!h || h <= 0) return alert("أدخل الطول");
     cart.push({ n: cur.name, p: Math.round(h * cur.price), img: getWatermarkedUrl(cur.img) });
-    document.getElementById('globalCartCount').innerText = cart.length;
-    alert("تمت الإضافة!");
+    document.getElementById('globalCartCount').innerText = cart.length; alert("تمت الإضافة!");
 }
 
-function toggleCartModal() {
-    const o = document.getElementById('cartOverlay');
-    o.style.display = o.style.display === 'flex' ? 'none' : 'flex';
-    let total = 0;
-    document.getElementById('cartItemsList').innerHTML = cart.map((i, idx) => {
-        total += i.p;
-        return `<div class="cart-item" style="display:flex;align-items:center;gap:10px;padding:10px 0;border-bottom:1px solid #eee;">
-            <img src="${i.img}" style="width:50px;height:50px;border-radius:8px;object-fit:cover;">
-            <div style="flex:1;"><b>${i.n}</b><br><span style="color:var(--gold)">${i.p.toLocaleString()} د.ع</span></div>
-            <i class="fas fa-trash" style="color:red;cursor:pointer;" onclick="removeFromCart(${idx})"></i>
-        </div>`;
-    }).join('') || '<p style="text-align:center;padding:20px;">السلة فارغة</p>';
-    if(cart.length > 0) document.getElementById('cartItemsList').innerHTML += `<div style="margin-top:15px;font-weight:900;text-align:center;background:#eee;padding:10px;">الإجمالي: ${total.toLocaleString()} د.ع</div>`;
-}
-
-function removeFromCart(idx) { cart.splice(idx, 1); document.getElementById('globalCartCount').innerText = cart.length; toggleCartModal(); }
-
-function sendOrder() {
-    if(cart.length === 0) return alert("السلة فارغة");
-    let msg = `طلب جديد من شبابيك:\n`;
-    cart.forEach((i, x) => msg += `${x+1}- ${i.n}: ${i.p.toLocaleString()} د.ع\n`);
-    window.location.href = `https://wa.me/9647883002797?text=${encodeURIComponent(msg)}`;
-    cart = []; document.getElementById('globalCartCount').innerText = "0"; toggleCartModal();
-}
-
-function handleSearch() {
-    const q = v('searchInput').toLowerCase();
-    const res = document.getElementById('searchRes');
-    if(q.length < 2) return res.style.display = 'none';
-    db.ref('products').once('value', snap => {
-        const found = Object.values(snap.val() || {}).filter(p => p.name.toLowerCase().includes(q));
-        res.innerHTML = found.map(p => `<div onclick='openCalc(${JSON.stringify(p)}); document.getElementById("searchRes").style.display="none"' style="padding:10px; border-bottom:1px solid #eee; cursor:pointer;">${p.name}</div>`).join('');
-        res.style.display = 'block';
-    });
-}
-
-// --- ٧. المحرك الرئيسي ---
-function loadInitialData() {
+// --- 10. تشغيل ومزامنة البيانات عند التحميل ---
+window.addEventListener('load', () => {
+    // الأقسام والمنتجات
     db.ref('categories').on('value', snap => {
         const cats = snap.val() || {};
         const list = document.getElementById('categoriesList');
-        if(list) list.innerHTML = Object.values(cats).map(c => `
-            <div class="cat-card-new" onclick="openCat('${c.name}')">
-                <img src="${c.img}" style="width:100%;height:100%;object-fit:cover;">
-                <div style="position:absolute;bottom:20px;left:50%;transform:translateX(-50%);background:var(--gold);color:white;padding:10px 25px;border-radius:12px;font-weight:900;">${c.name}</div>
-            </div>`).join('');
+        if(list) list.innerHTML = Object.values(cats).map(c => `<div class="cat-card-new" onclick="openCat('${c.name}')"><img src="${c.img}" style="width:100%;height:100%;object-fit:cover;"><div style="position:absolute;bottom:20px;left:50%;transform:translateX(-50%);background:var(--gold);color:white;padding:10px 25px;border-radius:12px;font-weight:900;">${c.name}</div></div>`).join('');
+        const admListCats = document.getElementById('admListCats');
+        if(admListCats) admListCats.innerHTML = Object.entries(cats).map(([k,v]) => `<tr><td>${v.name}</td><td><button onclick="deleteItem('categories','${k}')" style="color:red;border:none;background:none;">حذف</button></td></tr>`).join('');
+        const admProdCatSelect = document.getElementById('admProdCatSelect');
+        if(admProdCatSelect) admProdCatSelect.innerHTML = '<option disabled selected>اختر قسم المنتجات</option>' + Object.values(cats).map(s => `<option>${s.name}</option>`).join('');
     });
-}
 
-window.addEventListener('load', () => {
-    loadInitialData();
+    // المنتجات في لوحة التحكم
+    db.ref('products').on('value', snap => {
+        const data = snap.val() || {}, list = document.getElementById('admListProds');
+        if(list) list.innerHTML = Object.entries(data).map(([k,v]) => `<tr><td>${v.name}</td><td><button onclick="deleteItem('products','${k}')" style="color:red;border:none;background:none;">حذف</button></td></tr>`).join('');
+    });
+
+    // المنتدى (أقسام ومواضيع)
+    db.ref('forumSections').on('value', snap => {
+        const data = snap.val() || {};
+        const list = document.getElementById('admListForumSecs'), select = document.getElementById('selectForumTopicSec');
+        if(list) list.innerHTML = Object.entries(data).map(([k,v]) => `<tr><td>${v.name}</td><td><button onclick="deleteItem('forumSections','${k}')" style="color:red;border:none;background:none;">حذف</button></td></tr>`).join('');
+        if(select) select.innerHTML = '<option disabled selected value="">اختر القسم</option>' + Object.values(data).map(s => `<option value="${s.name}">${s.name}</option>`).join('');
+    });
+
+    db.ref('forumTopics').on('value', snap => {
+        const data = snap.val() || {}, list = document.getElementById('admListForumTopics');
+        if(list) list.innerHTML = Object.entries(data).reverse().map(([k,v]) => `<tr><td>${v.title}</td><td>${v.section}</td><td><button onclick="deleteItem('forumTopics','${k}')" style="color:red;border:none;background:none;">حذف</button></td></tr>`).join('');
+    });
+
+    // طرق الدفع
+    db.ref('payments').on('value', snap => {
+        const data = snap.val() || {}, list = document.getElementById('admListPays');
+        if(list) list.innerHTML = Object.entries(data).map(([k,v]) => `<tr><td>${v.name}</td><td><button onclick="deleteItem('payments','${k}')" style="color:red;border:none;background:none;">حذف</button></td></tr>`).join('');
+    });
+
+    // إدارة التنقل والهاش
     const hash = location.hash.replace('#', '');
     if (hash === 'categoryView') openCat(localStorage.getItem('lastCat'));
     else if (hash === 'productCalculator') openCalc(JSON.parse(localStorage.getItem('lastProd')));
     else showPage(hash || 'homePage', false);
-});
-
-window.addEventListener('popstate', () => {
-    const hash = location.hash.replace('#', '');
-    if (hash === 'categoryView') openCat(localStorage.getItem('lastCat'));
-    else if (hash === 'productCalculator') openCalc(JSON.parse(localStorage.getItem('lastProd')));
-    else showPage(hash || 'homePage', false);
-});
-</script>
-    <script>
-window.addEventListener('load', function() {
-    // التحقق إذا كان الزبون يريد الذهاب للمنتجات
-    const params = new URLSearchParams(window.location.search);
-    if (params.get('go') === 'categories') {
-        const target = document.getElementById('categories');
-        if (target) {
-            // تأخير بسيط 500ms لضمان تحميل الصور والأقسام أولاً
-            setTimeout(() => {
-                window.scrollTo({
-                    top: target.offsetTop - 100, // ترك مسافة بسيطة تحت الهيدر
-                    behavior: 'smooth'
-                });
-            }, 500);
-        }
-    }
 });
 </script>
 </body>
