--- a/ai.html
+++ b/ai.html
@@ -106,7 +106,7 @@
     </div>
 
     <div class="container" id="mainView">
-        <h1 class="page-title" id="viewTitle">أقسام المنتدى</h1>
+        <h1 class="page-title" id="viewTitle">أنافذتك لعالم الذوق والجمال</h1>
         <div id="backBtnCont" style="display:none;">
             <div class="back-btn" onclick="renderSections()"><i class="fas fa-arrow-right"></i> العودة للأقسام</div>
         </div>
